# kiwi-platform-py

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
docs/: aiohttp.rst  conf.py  index.rst  monkey.rst  requests.rst  settings.rst  useragents.rst  wsgi.rst
kw/platform/: __init__.py  _compat.py  monkey.py  settings.py  utils.py  wrappers.py  wsgi.py
kw/platform/aiohttp/: __init__.py  middlewares.py  monkey.py  session.py  utils.py
kw/platform/requests/: __init__.py  monkey.py  session.py
test/: conftest.py  test_aiohttp.py  test_monkey.py  test_nothing.py  test_requests.py  test_utils.py  test_wsgi.py
